--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   <body>
     <div class="img">
        <div class="content">
-           <h3>어서오십쇼!</h3>
+           <h3>어서오십쇼!!</h3>
        </div>
        <div class="img-cover"></div>
    </div>
