--- a/main.html
+++ b/main.html
@@ -58,12 +58,12 @@
     <div>
         <h2>한식</h2>
         <div class="gal">
-          <div><img src=012.jpg></div>
-          <div><img src=012.jpg></div>
-          <div><img src=012.jpg></div>
-          <div><img src=012.jpg></div>
-          <div><img src=012.jpg></div>
-          <div><img src=012.jpg></div>
+          <div><img src="012.jpg"></div>
+          <div><img src="012.jpg"></div>
+          <div><img src="012.jpg"></div>
+          <div><img src="012.jpg"></div>
+          <div><img src="012.jpg"></div>
+          <div><img src="012.jpg"></div>
         </div>
     </div>
         <br>
