--- a/1.html
+++ b/1.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>하양 맛집 소개</title>
-    <style media="screen">
-      body{
-        margin:0px;
-        background-color:#4436;
-      }
-      #box{
-        position:relative;
-        height:1000px;
-        margin:auto;
-        background-color:#F3F3F3;
-      }
-    </style>
-  </head>
-  <body>
-    <center><h1 margin="20px">어서오십쇼</h1></center>
-    <div id="box">
-        <h2>서브메뉴 자리</h2>
-    </div>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
+  maximum-scale=1.0, minimum-scale=1.0">
+        <title>하양 맛집 소개</title>
+        <link rel="stylesheet" href="1.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <script src="about.js" defer></script>
+        <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+    </head>
+    <body>
+        <!-- <main>
+        <article class="contents">
+        -->
+        <nav class="navbar">
+            <div class="nav_logo">
+              <i class="fas fa-bars" aria-hidden="true"></i>
+                <a href="main.html">food</a>
+            </div>
+            <ul class="nav_menu">
+                <li> <a href="about.html">한식</a></li>
+                <li><a href="about2.html">양식</a></li>
+                <li><a href="about3.html">일식/중식</a></li>
+                <li><a href="about4.html">분식</a></li>
+                <li><a href="#">카페/디저트</a></li>
+            </ul>
 
-  </body>
+            <a href="#" class="btn">
+                <i class="fas fa-bars" aria-hidden="true"></i>
+            </a>
+        </nav>
+        <section class="">
+          <div class="preview">
+
+          </div>
+          <div class="title">
+            단비식탁
+          </div>
+          <div class="informaiton"></div>
+        </section>
+    </body>
 </html>
