--- a/main.html
+++ b/main.html
@@ -4,90 +4,47 @@
     <meta charset="utf-8">
     <title>하양 맛집 소개</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="main.css">
-    <script>
-         const saTriggerMargin = 300;
-      const saElementList = document.querySelectorAll('.grid-container');
-
-      const saFunc = function() {
-        for (const element of saElementList) {
-          if (!element.classList.contains('show')) {
-            if (window.innerHeight > element.getBoundingClientRect().top + saTriggerMargin) {
-              element.classList.add('show');
-            }
-          }
-        }
-      }
-
-      window.addEventListener('load', saFunc);
-      window.addEventListener('scroll', saFunc);
-
-    </script>
-
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/1.css">
   </head>
   <body>
-    <div class="imges">
-       <div class="content">
-           <h1>어서오십쇼!!</h1>
-       </div>
-   </div>
+    <div class="main">
+        <nav class="navbar">
+            <div class="nav_logo">
+              <i class="fas fa-bars" aria-hidden="true"></i>
+                <a href="main.html">
+                    <p class="logofont">
+                        뭐먹양
+                    </p>
+                </a>
+            </div>
+            <ul class="nav_menu">
+                <li> <a href="about.html">한식</a></li>
+                <li><a href="about2.html">양식</a></li>
+                <li><a href="about3.html">일식/중식</a></li>
+                <li><a href="about4.html">분식</a></li>
+                <li><a href="#">카페/디저트</a></li>
+            </ul>
+            <a href="#" class="btn">
+                <i class="fas fa-bars" aria-hidden="true"></i>
+            </a>
+        </nav>
+    <div class="content">
+        <h1>어서오십쇼!!</h1>
+    </div>
         <h2>한식</h2>
-      <div class="grid-container">
-        <section class="container">
-          <article class="location-listing">
-              <a class="location-title" href="1.html">단비식탁</a>
-              <div class="location-image">
-                  <a href="1.html"> <img src="./imges/단비식탁.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">리틀짜글이</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/소소한부엌.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">유가네 닭갈비</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/유가네.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">하양연가</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/하양연가.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">반계탕&초계국수</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/반계탕.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">대왕비빔밥</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/대왕비빔.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">마왕비빔밥</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/마왕비빔.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">혼샤브</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/혼샤브.jpg"> </a>
-              </div>
-          </article>
-         
-      </div>
-      <a href="about.html">
-          <div class="about">더보기></div>
-      </a>
-      <hr>
+        <div class="container">
+            <div class="about">
+                <a href="about.html">더보기</a>
+            </div>
+            <div class="grid-container">
+                <div class="images">
+                    <img src="./imges/대왕비빔.jpg" alt="대왕비빔"/>
+                    <img src="./imges/유가네.jpg" alt="유가네 닭갈비"/>
+                    <img src="./imges/엄마분식.jpg" alt="엄마네 떡볶이"/>
+                </div>
+            </div>
+        </div>
         <h2>양식</h2>
         <div class="grid-container">
             <article class="location-listing">
@@ -102,12 +59,6 @@
                   <a href="#"> <img src="./imges/퀴다.jpg"> </a>
               </div>
           </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">라라코스트</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/라라.jpg"> </a>
-              </div>
-          </article>
           <div><img src="./imges/하양연가.jpg"></div>
       </div>
       <a href="about2.html">
@@ -116,12 +67,6 @@
         <hr>
         <h2>일식/중식</h2>
       <div class="grid-container">
-          <article class="location-listing">
-              <a class="location-title" href="#">간큰스시</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/간큰스시.jpg"> </a>
-              </div>
-          </article>
           <article class="location-listing">
               <a class="location-title" href="#">델꼬</a>
               <div class="location-image">
@@ -132,12 +77,6 @@
               <a class="location-title" href="#">스시카츠</a>
               <div class="location-image">
                   <a href="#"> <img src="./imges/스시카츠.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">키햐아</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/키햐야.jpg"> </a>
               </div>
           </article>
           <article class="location-listing">
@@ -153,12 +92,6 @@
               </div>
           </article>
           <article class="location-listing">
-              <a class="location-title" href="#">멘마아쯔이</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/멘마.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
             <a class="location-title" href="#">타코파파</a>
             <div class="location-image">
                 <a href="#"> <img src="./imges/타코파파.jpg"> </a>
@@ -171,18 +104,6 @@
         <hr>
         <h2>분식</h2>
       <div class="grid-container">
-          <article class="location-listing">
-              <a class="location-title" href="#">영천냄비돈까스&빨간지붕</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/우방분식.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">해피치즈스마일</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/happy.jpg"> </a>
-              </div>
-          </article>
           <article class="location-listing">
               <a class="location-title" href="#">불스 떡볶이</a>
               <div class="location-image">
@@ -205,12 +126,6 @@
               <a class="location-title" href="#">배떡</a>
               <div class="location-image">
                   <a href="#"> <img src="./imges/배떡.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">태리로제 떡볶이</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/태리.jpg"> </a>
               </div>
           </article>
           <article class="location-listing">
@@ -257,12 +172,6 @@
               </div>
           </article>
           <article class="location-listing">
-              <a class="location-title" href="#">요거트월드</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/one.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
               <a class="location-title" href="#">제이네공방</a>
               <div class="location-image">
                   <a href="#"> <img src="./imges/제이네.jpg"> </a>
@@ -280,5 +189,25 @@
           <div class="about">더보기></div>
       </a>
       <hr>
+
+      <script src="./js/data.js" charset="UTF-8"></script>
+      <script src="./js/about.js" charset="UTF-8"></script>
+      <script>
+        const saTriggerMargin = 300;
+const saElementList = document.querySelectorAll('.grid-container');
+
+const saFunc = function() {
+    for (const element of saElementList) {
+        if (!element.classList.contains('show')) {
+            if (window.innerHeight > element.getBoundingClientRect().top + saTriggerMargin) {
+              element.classList.add('show');
+            }
+        }
+    }
+} 
+
+window.addEventListener('load', saFunc);
+window.addEventListener('scroll', saFunc);
+    </script>
   </body>
 </html>
