반응형 nav 구현

--- a/about4.html
+++ b/about4.html
@@ -23,8 +23,8 @@
                 <li> <a href="about.html">한식</a></li>
                 <li><a href="about2.html">양식</a></li>
                 <li><a href="about3.html">일식/중식</a></li>
-                <li><a href="#">분식</a></li>
-                <li><a href="about5.html">카페/디저트</a></li>
+                <li><a href="about4.html">분식</a></li>
+                <li><a href="#">카페/디저트</a></li>
             </ul>
 
             <a href="#" class="btn">
@@ -33,21 +33,21 @@
         </nav>
 
         <header class="inner">
-            <h1>분식</h1>
-            <p style="font-size: 18px;">내 피엔 떡볶이가 흐른다..</p>
+            <h1>카페/디저트</h1>
+            <p style="font-size: 18px;">당충전은 필수</p>
         </header>
-         <div class="container">
+         <section class="container">
             <div class="foodlist">
                 <ul class="rest">
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/명랑.jpg" width="250px" height="250px"/>
+                                <img src="./imges/공차.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">명랑핫도그</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양로 74-1</p>
+                                            <h2 class="fn">공차</h2>
+                                            <p class="dnl">경북 경산시 하양읍 하양로 35 우방타운3차 상가 105동 123호 공차 경산하양점</p>
                                         </span>
                                         <p class="pls">정보 더보기</p>
                                     </div>
@@ -59,12 +59,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/배떡.jpg" width="250px" height="250px"/>
+                                <img src="./imges/배러댄와플.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">배떡</h2>
-                                            <p class="dnl">경북 경산시 진량읍 대구대로 83</p>
+                                            <h2 class="fn">배러댄와플</h2>
+                                            <p class="dnl">경북 경산시 하양읍 대경로 669-7</p>
                                         </span>
                                         <p class="pls">정보 더보기</p>
                                     </div>
@@ -75,12 +75,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/불스.jpg" width="250px" height="250px"/>
+                                <img src="./imges/블루웨이.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">불스떡볶이</h2>
-                                            <p class="dnl">경북 경산시 진량읍 대구대로 95-1</p>
+                                            <h2 class="fn">블루웨이</h2>
+                                            <p class="dnl">경북 경산시 하양읍 대학로295길 16</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -91,12 +91,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/삼첩.jpg" width="250px" height="250px"/>
+                                <img src="./imges/설빙.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">삼첩분식</h2>
-                                            <p class="dnl">경북 경산시 진량읍 대구대로 89</p>
+                                            <h2 class="fn">설빙</h2>
+                                            <p class="dnl">경북 경산시 하양읍 하양로 61-1</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -107,12 +107,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/엄마분식.jpg" width="250px" height="250px"/>
+                                <img src="./imges/스탬프.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">엄마떡볶이</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양로 96-1</p>
+                                            <h2 class="fn">스텀프하우스</h2>
+                                            <p class="dnl">경북 경산시 하양읍 대경로 669</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -123,12 +123,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/태리.jpg" width="250px" height="250px"/>
+                                <img src="./imges/제이네.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">태리로제떡볶이&닭강정 하양점</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로147길 14-5</p>
+                                            <h2 class="fn">제이네공방</h2>
+                                            <p class="dnl">경북 경산시 진량읍 영청길 22</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -139,12 +139,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/happy.jpg" width="250px" height="250px"/>
+                                <img src="./imges/jully.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">해피치즈스마일</h2>
-                                            <p class="dnl">경북 경산시 하양읍 하양로 57 1층</p>
+                                            <h2 class="fn">줄리도넛</h2>
+                                            <p class="dnl">경북 경산시 하양읍 하양로 24 1층 줄리도넛</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -155,12 +155,12 @@
                     <li class="foodli">
                         <div class="fooditem">
                             <figure class="fit">
-                                <img src="./imges/우방분식.jpg" width="250px" height="250px"/>
+                                <img src="./imges/one.jpg" width="250px" height="250px"/>
                                 <figcaption class="bb">
                                     <div>
                                         <span>
-                                            <h2 class="fn">영천냄비돈까스&빨간지붕</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로 669-6 상가 101호</p>
+                                            <h2 class="fn">원라운드</h2>
+                                            <p class="dnl">경북 경산시 하양읍 대학로305길 51-2 2층</p>
                                             <p class="pls">정보 더보기</p>
                                         </span>
                                     </div>
@@ -168,8 +168,25 @@
                             </figure>
                         </div>
                     </li>
+                    <li class="foodli">
+                        <div class="fooditem">
+                            <figure class="fit">
+                                <img src="./imges/기억안남.jpg" width="250px" height="250px"/>
+                                <figcaption class="bb">
+                                    <div>
+                                        <span>
+                                            <h2 class="fn">올더모어</h2>
+                                            <p class="dnl">경북 경산시 하양읍 문화로 90</p>
+                                            <p class="pls">정보 더보기</p>
+                                        </span>
+                                    </div>
+                                </figcaption>
+                            </figure>
+                        </div>
+                    </li>
+                    
                 </ul>
             </div>
-        </div>
+        </section>
     </body>
 </html>
