--- a/main.html
+++ b/main.html
@@ -1,213 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>하양 맛집 소개</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/1.css">
-  </head>
-  <body>
-    <div class="main">
-        <nav class="navbar">
-            <div class="nav_logo">
-              <i class="fas fa-bars" aria-hidden="true"></i>
-                <a href="main.html">
-                    <p class="logofont">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>하양 맛집 소개</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="./css/main.css">
+        <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
+    </head>
+    <body>
+        <div class="main">
+            <nav class="navbar">
+                <div class="nav_logo">
+                    <a href="#" class="nav_toggleBtn">
+                        <i class="fas fa-hamburger"></i>
+                      </a>
+                    <a href="main.html">
                         뭐먹양
-                    </p>
-                </a>
-            </div>
-            <ul class="nav_menu">
-                <li> <a href="about.html">한식</a></li>
-                <li><a href="about2.html">양식</a></li>
-                <li><a href="about3.html">일식/중식</a></li>
-                <li><a href="about4.html">분식</a></li>
-                <li><a href="#">카페/디저트</a></li>
-            </ul>
-            <a href="#" class="btn">
-                <i class="fas fa-bars" aria-hidden="true"></i>
-            </a>
-        </nav>
-    <div class="content">
-        <h1>어서오십쇼!!</h1>
-    </div>
-        <h2>한식</h2>
-        <div class="container">
-            <div class="about">
-                <a href="about.html">더보기</a>
-            </div>
-            <div class="grid-container">
-                <div class="images">
-                    <img src="./imges/대왕비빔.jpg" alt="대왕비빔"/>
-                    <img src="./imges/유가네.jpg" alt="유가네 닭갈비"/>
-                    <img src="./imges/엄마분식.jpg" alt="엄마네 떡볶이"/>
+                    </a>
                 </div>
+                <ul class="nav_menu">
+                    <li><a href="about.html">한식</a></li>
+                    <li><a href="about2.html">양식</a></li>
+                    <li><a href="about3.html">일식/중식</a></li>
+                    <li><a href="about4.html">카페/디저트</a></li>
+                </ul>
+            </nav>
+            <div class="wel">
+                <p>주인장의 하양 맛집 컬렉숀 <br/>
+                    주인장의 또간집을 둘러보세요!</p></div>
+                <div class="grid-container">
+                    <div class="location-listing">
+                        <a class="location-title">미미관 마라탕</a>
+                        <div class="location-image">
+                            <img src="./imges/미미관.jpg"/>
+                        </div>
+                    </div>
+                    <div class="location-listing">
+                        <a class="location-title">스시카츠</a>
+                        <div class="location-image">
+                            <img src="./imges/스시카츠.jpg"/>
+                        </div>
+                    </div>
+                    <div class="location-listing">
+                        <a class="location-title">하양돈부리</a>
+                        <div class="location-image">
+                            <img src="./imges/하양돈부리.jpg"/>
+                        </div>
+                    </div>
+                    <div class="location-listing">
+                        <a class="location-title">혼샤브</a>
+                        <div class="location-image">
+                            <img src="./imges/혼샤브.jpg"/>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="about">더보기</button>
             </div>
+
         </div>
-        <h2>양식</h2>
-        <div class="grid-container">
-            <article class="location-listing">
-              <a class="location-title" href="#">이상한키친</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/이상한키친.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">퀴다</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/퀴다.jpg"> </a>
-              </div>
-          </article>
-          <div><img src="./imges/하양연가.jpg"></div>
-      </div>
-      <a href="about2.html">
-          <div class="about">더보기></div>
-      </a>
-        <hr>
-        <h2>일식/중식</h2>
-      <div class="grid-container">
-          <article class="location-listing">
-              <a class="location-title" href="#">델꼬</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/델꼬.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">스시카츠</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/스시카츠.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">하양돈부리</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/하양돈부리.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">미미관 마라탕</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/미미관.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-            <a class="location-title" href="#">타코파파</a>
-            <div class="location-image">
-                <a href="#"> <img src="./imges/타코파파.jpg"> </a>
-            </div>
-        </article>
-      </div>
-      <a href="about3.html">
-          <div class="about">더보기></div>
-      </a>
-        <hr>
-        <h2>분식</h2>
-      <div class="grid-container">
-          <article class="location-listing">
-              <a class="location-title" href="#">불스 떡볶이</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/불스.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">명랑 핫도그</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/명랑.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">삼첩분식</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/삼첩.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">배떡</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/배떡.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-            <a class="location-title" href="#">엄마분식</a>
-            <div class="location-image">
-                <a href="#"> <img src="./imges/엄마분식.jpg"> </a>
-            </div>
-        </article>
-      </div>
-      <a href="about4.html">
-          <div class="about">더보기></div>
-      </a>
-        <hr>
-         <h2>카페/디저트</h2>
-      <div class="grid-container">
-          <article class="location-listing">
-              <a class="location-title" href="#">설빙</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/설빙.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">배러댄와플</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/배러댄와플.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">줄리 도넛</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/jully.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">블루웨이 샐러드</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/블루웨이.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">스텀프하우스</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/스탬프.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-              <a class="location-title" href="#">제이네공방</a>
-              <div class="location-image">
-                  <a href="#"> <img src="./imges/제이네.jpg"> </a>
-              </div>
-          </article>
-          <article class="location-listing">
-            <a class="location-title" href="#">올더모어</a>
-            <div class="location-image">
-                <a href="#"> <img src="./imges/기억안남.jpg"> </a>
-            </div>
-        </section>
-        </article>
-      </div>
-      <a href="about5.html">
-          <div class="about">더보기></div>
-      </a>
-      <hr>
-
-      <script src="./js/data.js" charset="UTF-8"></script>
-      <script src="./js/about.js" charset="UTF-8"></script>
-      <script>
-        const saTriggerMargin = 300;
-const saElementList = document.querySelectorAll('.grid-container');
-
-const saFunc = function() {
-    for (const element of saElementList) {
-        if (!element.classList.contains('show')) {
-            if (window.innerHeight > element.getBoundingClientRect().top + saTriggerMargin) {
-              element.classList.add('show');
-            }
-        }
-    }
-} 
-
-window.addEventListener('load', saFunc);
-window.addEventListener('scroll', saFunc);
-    </script>
-  </body>
+        <script src="./js/data.js" charset="UTF-8"></script>
+        <script src="./js/about.js" charset="UTF-8"></script>
+    </body>
 </html>
