--- a/about.html
+++ b/about.html
@@ -2,173 +2,59 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, 
-  maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <title>하양 맛집 소개</title>
-        <link rel="stylesheet" href="about.css">
+        <link rel="stylesheet" href="./css/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <script src="about.js" defer></script>
         <script src="https://use.fontawesome.com/releases/v6.0.0/js/all.js"></script>
     </head>
     <body>
-        <!-- <main>
-        <article class="contents">
-        -->
-        <nav class="navbar">
-            <div class="nav_logo">
-              <i class="fas fa-bars" aria-hidden="true"></i>
-                <a href="main.html">food</a>
-            </div>
-            <ul class="nav_menu">
-                <li> <a href="#">한식</a></li>
-                <li><a href="about2.html">양식</a></li>
-                <li><a href="about3.html">일식/중식</a></li>
-                <li><a href="about4.html">분식</a></li>
-                <li><a href="about5.html">카페/디저트</a></li>
-            </ul>
-
-            <a href="#" class="btn">
-                <i class="fas fa-bars" aria-hidden="true"></i>
-            </a>
-        </nav>
-
-        <header class="inner">
-            <h1>한식</h1>
-            <p style="font-size: 18px;">한국인은 밥심!</p>
-        </header>
-         <div class="container">
-            <div class="foodlist">
-                <ul class="rest">
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/하양연가.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">하양연가</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로 669-3</p>
-                                        </span>
-                                        <p class="pls">정보 더보기</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/단비식탁.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">단비식탁</h2>
-                                            <p class="dnl">경상북도 경산시 하양읍 문화로2길 11 문화로2길13</p>
-                                        </span>
-                                        <p class="pls">정보 더보기</p>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/소소한부엌.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">소소한부엌</h2>
-                                            <p class="dnl">경상북도 경산시 하양읍 하양역길 18</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/대왕비빔.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">고기듬뿍대왕비빔밥</h2>
-                                            <p class="dnl">경북 경산시 하양읍 금송로 58 고기듬뿍대왕비빔밥</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/반계탕.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">반계탕&초계냉면</h2>
-                                            <p class="dnl">경북 경산시 진량읍 공단로 423</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/혼샤브.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">혼샤브</h2>
-                                            <p class="dnl">경북 경산시 하양읍 대경로 669-6</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/유가네.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">유가네닭갈비</h2>
-                                            <p class="dnl">경북 경산시 하양읍 문화로 2 2층 유가네닭갈비 경산하양점</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
-                    <li class="foodli">
-                        <div class="fooditem">
-                            <figure class="fit">
-                                <img src="./imges/마왕비빔.jpg" width="250px" height="250px"/>
-                                <figcaption class="bb">
-                                    <div>
-                                        <span>
-                                            <h2 class="fn">마왕고기비빔밥</h2>
-                                            <p class="dnl">경북 경산시 대학로44길 14</p>
-                                            <p class="pls">정보 더보기</p>
-                                        </span>
-                                    </div>
-                                </figcaption>
-                            </figure>
-                        </div>
-                    </li>
+        <div class="main">
+            <nav class="navbar">
+                <i class="fas fa-bars"></i>
+                <div class="nav_logo">
+                    <a href="main.html">
+                        <p class="logofont">
+                            뭐먹양
+                        </p>
+                    </a>
+                </div>
+                <ul class="nav_menu">
+                    <li> <a href="about.html">한식</a></li>
+                    <li><a href="about2.html">양식</a></li>
+                    <li><a href="about3.html">일식/중식</a></li>
+                    <li><a href="#">카페/디저트</a></li>
                 </ul>
+            </nav>
+        <header class="inner">
+            <h1 style="font-size: 20px;">한식</h1>
+            <p style="font-size: 16px;">한국인은 밥심!</p>
+        </header>
+        <div class="grid-container">
+            <div class="location-listing">
+                <a class="location-title">미미관 마라탕</a>
+                <div class="location-image">
+                    <img src="./imges/미미관.jpg"/>
+                </div>
+            </div>
+            <div class="location-listing">
+                <a class="location-title">스시카츠</a>
+                <div class="location-image">
+                    <img src="./imges/스시카츠.jpg"/>
+                </div>
+            </div>
+            <div class="location-listing">
+                <a class="location-title">하양돈부리</a>
+                <div class="location-image">
+                    <img src="./imges/하양돈부리.jpg"/>
+                </div>
+            </div>
+            <div class="location-listing">
+                <a class="location-title">혼샤브</a>
+                <div class="location-image">
+                    <img src="./imges/혼샤브.jpg"/>
+                </div>
             </div>
         </div>
     </body>
